--- a/Names.html
+++ b/Names.html
@@ -8,6 +8,9 @@ alert("James McNeil, Gustavo Dias, Simeon Dzeiciol");
 // Display next Name(s) Here
 alert ("");
 
+// Display next Name(s) Here
+alert ("Richard Davis");
+
 // Display next Name
 alert ("Ryan Arrowsmith");
 
